# django-channels-chat

./: Dockerfile  docker-compose.yml  docker-entrypoint.sh  pyproject.toml
data/: db.sqlite3
src/chat/: consumers.py  models.py  routing.py  views.py
src/chat/migrations/: 0001_initial.py  0002_auto_20210227_0440.py  0003_react.py  0004_react_ctime.py
src/chat/static/: interface.js
src/chat/templates/: index.html
src/chatroom/: routing.py  settings.py  urls.py
tests/: test_chatroom.py
